--- a/index.html
+++ b/index.html
@@ -28,8 +28,27 @@
                 </div>
             </nav>
          </div>
-
     </header>
+
+    <main>
+        <div class="block1">
+            <div class="block1_left">
+                <div class="block1_txt">
+                    <h1>Let's hit the road</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sint totam. Laborum, vero. Quo similique corrupti beatae veniam, nemo voluptatem, eligendi doloribus quis ut maiores consequuntur. Quibusdam error temporibus repellat!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum deleniti, facilis nemo eos.
+                    </p>
+                    <a href="#"><Button>START</Button></a>
+                </div>
+            </div>
+            <div class="block1_right">
+
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
