Created block 2 and 3. Reworked classes at all blocks (make it simpler). Added adaptation for all block 1, 2, 3.

--- a/index.html
+++ b/index.html
@@ -31,24 +31,41 @@
     </header>
 
     <main>
-        <div class="block1">
-            <div class="block1_left">
-                <div class="block1_txt">
-                    <h1>Let's hit the road</h1>
+        <!-- Block 1 -->
+        <div class="blocks block1">
+                <div class="main_block_txt">
+                    <h1 class="main_h1">Let's hit the road</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sint totam. Laborum, vero. Quo similique corrupti beatae veniam, nemo voluptatem, eligendi doloribus quis ut maiores consequuntur. Quibusdam error temporibus repellat!
                     </p>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum deleniti, facilis nemo eos.
                     </p>
-                    <a href="#"><Button>START</Button></a>
+                    <a href="#"><Button class="main_btns">START</Button></a>
                 </div>
-            </div>
-            <div class="block1_right">
+            <div class="block1_photo main_photos">
             </div>
         </div>
         
+        <!-- Block 2 -->
+        <div class="blocks block2">
+            <div class="block2_photo main_photos"></div>
+            <div class="main_block_txt">
+                <h1 class="main_h1">Story</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea impedit velit necessitatibus distinctio praesentium provident quasi quibusdam aperiam quia quidem consequuntur officia iste nemo repudiandae, pariatur tempora, quo quam porro.</p>
+                <a href="#"><button class="main_btns">MORE</button></a>
+            </div>
+        </div>
+
+        <!-- Block 3 -->
+        <div class="blocks block3">
+            <div class="main_block_txt">
+                <h1 class="main_h1">Story</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea impedit velit necessitatibus distinctio praesentium provident quasi quibusdam aperiam quia quidem consequuntur officia iste nemo repudiandae, pariatur tempora, quo quam porro.</p>
+                <a href="#"><button class="main_btns">MORE</button></a>
+            </div>
+            <div class="block3_photo main_photos"></div>
+        </div>
     </main>
-    
 </body>
 </html>
