--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
             </div>
             <div class="block3_photo main_photos"></div>
         </div>
+        
+        <!-- Gallery -->
+        <div class="gallery">
+            <h1 class="main_h1">Gallery</h1>
+            <div class="gallery_photos">
+                <i class="fa-solid fa-chevron-left"></i>
+                <img src="./pictures/camp.jpg" alt="">
+                <img src="./pictures/campfire-cooking.png" alt="">
+                <img src="./pictures/camping-dark-forest-light.jpg" alt="">
+                <img src="./pictures/Bazaar.webp" alt="">
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+        </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/4c969d954b.js" crossorigin="anonymous"></script>
 </body>
 </html>
