Added block Features and adaptation for it

--- a/index.html
+++ b/index.html
@@ -79,6 +79,67 @@
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
         </div>
+
+        <!-- Features -->
+        <div class="features">
+            <h1 class="main_h1">Features</h1>
+            <div class="features_grid">
+                <div class="one">
+                    <img src="./pictures/airplane-48.png" alt="">
+                    <p>
+                        One
+                    </p>
+                    <p>
+                        Duis vel erat odio. Duis sed elementum magna, vel egestas dui.
+                    </p>
+                </div>
+                <div class="two">
+                    <img src="./pictures/map_marker-48.png" alt="">
+                    <p>
+                        Two
+                    </p>
+                    <p>
+                        Cras imperdiet augue et euismod mollis
+                    </p>
+                </div>
+                <div class="three">
+                    <img src="./pictures/movie-48.png" alt="">
+                    <p>
+                        Three
+                    </p>
+                    <p>
+                        Phasellus sit amet lacus orci. Aliquam accumsan aliquet urna eget commodo.
+                    </p>
+                </div>
+                <div>
+                    <img src="./pictures/alarm_clock-48.png" alt="">
+                    <p>
+                        Four
+                    </p>
+                    <p>
+                        Vestibulum consequat felis mi, ut blandit arcu commodo vel.
+                    </p>
+                </div>
+                <div class="five">
+                    <img src="./pictures/face-48.png" alt="">
+                    <p>
+                        Five
+                    </p>
+                    <p>
+                        Nullam nec elit nec auque commodo ultricies ut ac lorem.
+                    </p>
+                </div>
+                <div>
+                    <img src="./pictures/genius-48.png" alt="">
+                    <p>
+                        Six
+                    </p>
+                    <p>
+                        Donec mollis massa id lectus fermentum tempor. Nulla finibus massa ex.
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://kit.fontawesome.com/4c969d954b.js" crossorigin="anonymous"></script>
