Added block Write to us. Added margin bottom after gallery h1

--- a/index.html
+++ b/index.html
@@ -140,6 +140,60 @@
                 </div>
             </div>
         </div>
+
+        <!-- Write to us -->
+        <div class="forms_block">
+            <h1 class="main_h1">Write to us</h1>
+            <form action="">
+                <div class="general_inf">
+                    <div>
+                        <label for="name">Name:</label>
+                        <br>
+                        <input type="text" id="name">
+                    </div>
+                    <div>
+                        <label for="email">Email:</label>
+                        <br>
+                        <input type="text" id="email">
+                    </div>
+                    <div>
+                        <label for="phone">Phone:</label>
+                        <br>
+                        <input type="text" id="phone">
+                    </div>
+                </div>
+                <div class="radios">
+                    <label for="">Contact me via:</label>
+                    <input type="radio" name="contact" id="email-check">
+                    <label for="email-check">Email</label>
+                    <input type="radio" name="contact" id="phone-check">
+                    <label for="phone-check">Phone</label>
+                    <input type="radio" name="contact" id="telegram-check">
+                    <label for="telegram-check">Telegram</label>
+                </div>
+                <div class="select">
+                    <label for="topics">Topics:</label>
+                    <br>
+                    <select name="Topic_list" id="topics">
+                        <option value="" disabled selected>Post my story</option>
+                    </select>
+                </div>
+                <div class="message">
+                    <label for="message">Message:</label>
+                    <br>
+                    <input type="text" id="message">
+                </div>
+                <div class="send">
+                    <div>
+                        <input type="checkbox" id="human">
+                        <label for="human">I am a human</label>
+                    </div>
+                    <div>
+                        <button class="main_btns" id="send_data">SEND</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </main>
 
     <script src="https://kit.fontawesome.com/4c969d954b.js" crossorigin="anonymous"></script>
