--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="message">
                     <label for="message">Message:</label>
                     <br>
-                    <input type="text" id="message">
+                    <input type="textarea" id="message">
                 </div>
                 <div class="send">
                     <div>
