Added adaptation for screens (600-850px) and (>600px). Added menu button for size >600px

--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
                     <a href="#"><img src="./pictures/gmail-128.png" alt=""></a>
                 </div>
             </nav>
+            
+            <div class="container">
+                <div class="toggle">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
          </div>
     </header>
 
     <main>
         <!-- Block 1 -->
         <div class="blocks block1" id="stories">
-                <div class="main_block_txt">
+                <div class="main_block_txt block_txt">
                     <h1 class="main_h1">Let's hit the road</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sint totam. Laborum, vero. Quo similique corrupti beatae veniam, nemo voluptatem, eligendi doloribus quis ut maiores consequuntur. Quibusdam error temporibus repellat!
@@ -50,7 +58,7 @@
         <!-- Block 2 -->
         <div class="blocks block2">
             <div class="block2_photo main_photos"></div>
-            <div class="main_block_txt">
+            <div class="main_block_txt block_txt">
                 <h1 class="main_h1">Story</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea impedit velit necessitatibus distinctio praesentium provident quasi quibusdam aperiam quia quidem consequuntur officia iste nemo repudiandae, pariatur tempora, quo quam porro.</p>
                 <a href="#"><button class="main_btns">MORE</button></a>
@@ -59,7 +67,7 @@
 
         <!-- Block 3 -->
         <div class="blocks block3">
-            <div class="main_block_txt">
+            <div class="main_block_txt block_txt">
                 <h1 class="main_h1">Story</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea impedit velit necessitatibus distinctio praesentium provident quasi quibusdam aperiam quia quidem consequuntur officia iste nemo repudiandae, pariatur tempora, quo quam porro.</p>
                 <a href="#"><button class="main_btns">MORE</button></a>
@@ -139,7 +147,7 @@
                         Phasellus sit amet lacus orci. Aliquam accumsan aliquet urna eget commodo.
                     </p>
                 </div>
-                <div>
+                <div class="four">
                     <img src="./pictures/alarm_clock-48.png" alt="">
                     <p>
                         Four
@@ -157,7 +165,7 @@
                         Nullam nec elit nec auque commodo ultricies ut ac lorem.
                     </p>
                 </div>
-                <div>
+                <div class="six">
                     <img src="./pictures/genius-48.png" alt="">
                     <p>
                         Six
@@ -212,7 +220,7 @@
                     <input type="textarea" id="message">
                 </div>
                 <div class="send">
-                    <div>
+                    <div class="check_robot">
                         <input type="checkbox" id="human">
                         <label for="human">I am a human</label>
                     </div>
